--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ main {
 .article1 {
     display: flex;
     margin-top: 120px;
+
 }
 
 .side-menu {
@@ -215,7 +216,7 @@ hr {
     border: .5px solid lightgray;
     border-radius: 10px;
     padding: 30px;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-bottom: 20px;
 
 }
@@ -224,6 +225,7 @@ hr {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-left: 60px;
+    margin-right: 60px;
 }
 
 .upcoming-match-charts {
